[package]
name = "format-project"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
bevy_infinite_grid = "0.15.0"
bevy_panorbit_camera = "0.26.0"
egui = "0.31.1"
egui_dock = "0.16.0"
bevy_math = { version = "0.16.1", features = ["mint"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
